--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  prometheus:
     runs-on: ubuntu-latest
 
     steps:
@@ -40,4 +40,21 @@ jobs:
         run: |
           helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
           helm install my-prometheus prometheus-community/prometheus --version 25.16.0 -n prometheus
-          
+    
+     - name: Clone Prometheus
+        uses: GuillaumeFalourd/clone-github-repo-action@v2.3
+        with:
+          depth: 1
+          branch: 'main'
+          owner: 'AnastasiyaOhal'
+          repository: 'EKS_Prometheus'
+    
+      - name: Access cloned repo
+        run: |
+           cd EKS_Prometheus
+           ls -la
+
+      - name: Deploy Prometheus from Helm Chart
+        run: |
+          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+          helm upgrade my-prometheus prometheus-community/prometheus -f values.yaml -f values-dev.yaml -n prometheus    
