--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -36,10 +36,10 @@ jobs:
           chmod +x get_helm.sh
           ./get_helm.sh
 
-      - name: Deploy prometheus from Helm Chart
-        run: |
-          helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
-          helm install my-prometheus prometheus-community/prometheus --version 25.16.0 -n prometheus
+  #    - name: Deploy prometheus from Helm Chart
+  #      run: |
+  #        helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+  #        helm install my-prometheus prometheus-community/prometheus --version 25.16.0 -n prometheus
     
       - name: Clone Prometheus
         uses: GuillaumeFalourd/clone-github-repo-action@v2.3
